fix: avoided unnecessary changes in api-doc.yml
